# prosty_keylogger

./: .gitignore  Cargo.toml  README.md
src/: README.md  keys.rs  lib.rs  main.rs
src/cc/: main.rs  options.rs
src/client/: main.rs  options.rs
src/common/: install_configuration.rs  mod.rs  path.rs  person.rs  setup_logger.rs  task_configuration.rs
src/installer/: main.rs  options.rs
src/start/: main.rs  options.rs
